Regression: Vertex Crease operator does not create vertex crease layer #101393

Closed
opened 2022-09-27 11:01:45 +02:00 by Sun Kim · 8 comments
Contributor

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.5.1 30.0.15021.11005

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-26 23:14, hash: 7fa7c7ceda
Worked: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-22 21:54, hash: e9344d329f

Caused by a8a454287a

Short description of error
Vertex Crease operator from Vertex menu does not create vertex crease layer.

Editing vertex crease in sidebar's transform panel creates one though. After that Vertex Crease operator works as expected.

Exact steps for others to reproduce the error

  • From startup file, go into Edit mode with the default cube
  • Select a vertex and try to edit its crease value with Vertex > Vertex Crease. It does nothing
  • If you edit vertex crease in sidebar's transform panel it will create vertex crease layer. After that Vertex Crease operator will work as expected

VertexCreaseIssue.mp4

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.5.1 30.0.15021.11005 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-26 23:14, hash: `7fa7c7ceda` Worked: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-22 21:54, hash: `e9344d329f` Caused by a8a454287a **Short description of error** Vertex Crease operator from Vertex menu does not create vertex crease layer. Editing vertex crease in sidebar's transform panel creates one though. After that Vertex Crease operator works as expected. **Exact steps for others to reproduce the error** * From startup file, go into Edit mode with the default cube * Select a vertex and try to edit its crease value with `Vertex > Vertex Crease`. It does nothing * If you edit vertex crease in sidebar's transform panel it will create vertex crease layer. After that Vertex Crease operator will work as expected [VertexCreaseIssue.mp4](https://archive.blender.org/developer/F13580159/VertexCreaseIssue.mp4)
Author
Contributor

Added subscriber: @persun

Added subscriber: @persun
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

Wow, I just came here to report this! :D

Wow, I just came here to report this! :D
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser self-assigned this 2022-09-27 13:05:44 +02:00
Philipp Oeser changed title from Vertex Crease operator does not create vertex crease layer to Regression: Vertex Crease operator does not create vertex crease layer 2022-09-27 13:06:32 +02:00

This issue was referenced by ed28ba4e99

This issue was referenced by ed28ba4e999df846c32b68d68173d8d0b0ede977
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101393
No description provided.