source/blender/editors/transform/transform_convert_mesh_vert_cdata.c
@@ -90,8 +90,8 @@ static void createTransMeshVertCData(bContext *UNUSED(C), TransInfo *t)
       cd_offset = CustomData_get_offset(&bm->vdata, CD_BWEIGHT);
     }
     else {
-      if (!CustomData_has_layer(&bm->edata, CD_CREASE)) {
-        BM_data_layer_add(bm, &bm->edata, CD_CREASE);
+      if (!CustomData_has_layer(&bm->vdata, CD_CREASE)) {
+        BM_data_layer_add(bm, &bm->vdata, CD_CREASE);
       }
       cd_offset = CustomData_get_offset(&bm->vdata, CD_CREASE);
     }
